add build script for an uberjar